feat(mobile-money): réseaux multiples par numéro, choix de l'opérateur par l'expéditeur (#296)